kubernetes/apps/kube-system/cilium/policies/deny-direct-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-direct-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      egress: vpn-only
  egressDeny:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.42.0.0/16 # pods
            - 10.43.0.0/16 # services
            - 10.25.0.0/16 # LAN, reached directly on purpose via NO_PROXY
